attempt to fix nav icon flickering when scrolling in editor

--- a/less/widgets/widget-navigation.less
+++ b/less/widgets/widget-navigation.less
@@ -29,6 +29,7 @@ div#page-zones__template-widgets__extendednavigation-navigation .bk-overlay {
     height: 100%;
     position: fixed;
     z-index: 99999;
+    -webkit-overflow-scrolling: touch;
 
     background-color: @color__navigation--background;
     &:hover {
